@@ -70,6 +70,7 @@
 - Fixed output of IKE PSK (mode 5300 and 5400) hashes to have separators at right position
 - Fixed output password of "e" rule in pure and cpu rule engine if separator character is also the first letter
 - Fixed problem with the usage of the hexadecimal notations (\x00-\xff) within rules
+- Fixed race condition in maskfile mode by using a dedicated flag for restore execution
 - Fixed some memory leaks in case hashcat is shutting down due to some file error
 - Fixed the 7-Zip parser to allow the entire supported range of encrypted and decrypted data lengths
 - Fixed the validation of the --brain-client-features command line argument (only values 1, 2 or 3 are allowed)
